--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="CMS Web App"
     />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/admin.css">
@@ -32,28 +32,14 @@
       FleetCart.langs['media::media.file_manager.title'] = 'File Manager';
       FleetCart.langs['media::messages.image_has_been_added'] = 'Image has been added.';
   </script>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>CMS</title>
   </head>
   <body class="skin-blue sidebar-mini offcanvas clearfix ltr" id="root">
-    <noscript>You need to enable JavaScript to run this app.</noscript>    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>    
     <script src="/assets/js/main.js"></script>
-    <!-- <script src="./assets/js/admin.js"></script>
-    <script src="./assets/js/dashboard.js" ></script> -->
     
   </body>
   
